# nonebot-plugin-chatrecorder-extension-send-anything-anywhere

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codecov.yml  release-draft.yml  release.yml
nonebot_plugin_cesaa/: __init__.py  record.py  record.pyi
tests/: conftest.py  test_get_message.py
