[tool.poetry]
name = "nonebot-plugin-cesaa"
version = "0.3.0"
description = "为 chatrecorder 添加 send-anything-anywhere 的 PlatformTarget 支持"
authors = ["hemengyang <hmy0119@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/he0119/nonebot-plugin-chatrecorder-extension-send-anything-anywhere"
repository = "https://github.com/he0119/nonebot-plugin-chatrecorder-extension-send-anything-anywhere"
documentation = "https://github.com/he0119/nonebot-plugin-chatrecorder-extension-send-anything-anywhere#readme"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.2.0"
nonebot-plugin-chatrecorder = ">=0.6.0,<1.0.0"
nonebot-plugin-send-anything-anywhere = "^0.6.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
nonebug = "^0.3.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.23.3"
gevent = "^23.7.0"
asyncpg = "*"
aiomysql = "*"
nonebot-adapter-onebot = "^2.2.4"
nonebot-plugin-orm = { extras = ["default"], version = ">=0.7.0" }

[tool.nonebot]
plugins = ["nonebot_plugin_cesaa"]
adapters = [
  { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12", project_link = "nonebot-adapter-onebot", desc = "OneBot V12 协议" },
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11", project_link = "nonebot-adapter-onebot", desc = "OneBot V11 协议" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
  "W",   # pycodestyle warnings
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
]
ignore = [
  "E402",  # module-import-not-at-top-of-file, Module level import not at top of cell
  "UP037", # quoted-annotation,	Remove quotes from type annotation
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
