[project]
name = "nonebot-plugin-cesaa"
version = "0.4.0"
description = "为 chatrecorder 添加 send-anything-anywhere 的 PlatformTarget 支持"
authors = [{ name = "uy_sun", email = "hmy0119@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.9"
dependencies = [
  "nonebot2>=2.2.0",
  "nonebot-plugin-chatrecorder>=0.6.0",
  "nonebot-plugin-send-anything-anywhere>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/he0119/nonebot-plugin-chatrecorder-extension-send-anything-anywhere"
Repository = "https://github.com/he0119/nonebot-plugin-chatrecorder-extension-send-anything-anywhere.git"
Issues = "https://github.com/he0119/nonebot-plugin-chatrecorder-extension-send-anything-anywhere/issues"
Changelog = "https://github.com/he0119/nonebot-plugin-chatrecorder-extension-send-anything-anywhere/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_cesaa"]

[tool.hatch.build.targets.sdist]
only-include = ["nonebot_plugin_cesaa"]

[tool.uv]
dev-dependencies = [
  "nonebug>=0.3.7",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.1",
  "pytest-mock>=3.14.0",
  "pytest-asyncio>=0.23.7",
  "gevent>=24.2.1",
  "asyncpg>=0.29.0",
  "aiomysql>=0.2.0",
  "nonebot-adapter-onebot>=2.4.4",
  "nonebot-plugin-orm[default]>=0.7.4",
  "poethepoet>=0.28.0",
]

[tool.uv.pip]
universal = true

[tool.poe.tasks]
test = "pytest --cov=nonebot_plugin_cesaa --cov-report xml -n auto"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "W",   # pycodestyle warnings
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
]
ignore = [
  "E402", # module-import-not-at-top-of-file
]

[tool.nonebot]
plugins = ["nonebot_plugin_cesaa"]
adapters = [
  { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12", project_link = "nonebot-adapter-onebot", desc = "OneBot V12 协议" },
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11", project_link = "nonebot-adapter-onebot", desc = "OneBot V11 协议" },
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
